fix subordinate grouping, layout alignments

--- a/webui/components/messages/process-group/process-group.css
+++ b/webui/components/messages/process-group/process-group.css
@@ -518,6 +518,8 @@
   scrollbar-width: thin;
   -ms-overflow-style: thin;
   scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
+  padding-left: 17px;
+  padding-right: 1em;
   /* overscroll-behavior: contain; */
 }
 
