--- a/webui/css/messages.css
+++ b/webui/css/messages.css
@@ -406,7 +406,7 @@
   font-weight: 500;
   font-size: var(--font-size-xs);
   /* min-width: 7em; */
-  width: 4em;
+  width: 5em;
   text-align: right;
 }
 
